Fix size/alignment of close tab button

--- a/app/stylesheets/shell-window/chrome-tabs.less
+++ b/app/stylesheets/shell-window/chrome-tabs.less
@@ -107,15 +107,14 @@
       width: 15px;
       height: 15px;
       z-index: 2;
-      border-radius: 8px;
+      border-radius: 50%;
+      text-align: center;
 
       &:before {
+        display: block;
         content: "\00D7";
-        position: absolute;
-        top: 1px;
-        right: 3px;
-        font-size: 12px;
-        line-height: 12px;
+        font-size: 18px;
+        font-weight: 200;
       }
 
       &:hover:before,
